Use relative paths

--- a/plots/field_wise_attention.ipynb
+++ b/plots/field_wise_attention.ipynb
@@ -43,7 +43,7 @@
     "from bertviz import head_view\n",
     "\n",
     "import sys\n",
-    "module_path = os.path.abspath(os.path.join('/home/razorin/tabularts/'))\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"/home/razorin/tabularts/\")"
+    "os.chdir(\"..\")"
    ]
   },
   {
@@ -180,7 +180,7 @@
     ")\n",
     "AutoConfig.register(\"RowTabBERT\", RowTabBERTConfig)\n",
     "AutoModelForSequenceClassification.register(RowTabBERTConfig, RowTabBERT)\n",
-    "row_tabbert_model_path_pt = f\"/home/razorin/tabularts/results/{args_row_tabbert.data_type}/RowTabBERT/RowTabBERT_{args_row_tabbert.fieldtransf_nheads}fieldtransfheads_{args_row_tabbert.fieldtransf_nlayers}fieldtransflayers_{args_row_tabbert.hidden_size}hs_{args_row_tabbert.n_heads}heads_{args_row_tabbert.n_layers}layers_{'posemb' if args_row_tabbert.pos_emb else 'noposemb'}_{'colemb' if args_row_tabbert.col_emb else 'nocolemb'}_MSE_pt{args_row_tabbert.pt_epochs}ep_ft{args_row_tabbert.ft_epochs}ep_seed{args_row_tabbert.seed}/pt\" \n",
+    "row_tabbert_model_path_pt = f\"../results/{args_row_tabbert.data_type}/RowTabBERT/RowTabBERT_{args_row_tabbert.fieldtransf_nheads}fieldtransfheads_{args_row_tabbert.fieldtransf_nlayers}fieldtransflayers_{args_row_tabbert.hidden_size}hs_{args_row_tabbert.n_heads}heads_{args_row_tabbert.n_layers}layers_{'posemb' if args_row_tabbert.pos_emb else 'noposemb'}_{'colemb' if args_row_tabbert.col_emb else 'nocolemb'}_MSE_pt{args_row_tabbert.pt_epochs}ep_ft{args_row_tabbert.ft_epochs}ep_seed{args_row_tabbert.seed}/pt\" \n",
     "row_tabbert_model_pt = AutoModel.from_pretrained(row_tabbert_model_path_pt, vocab=dataset.vocab, output_attentions=True)"
    ]
   },
@@ -211,7 +211,7 @@
     ")\n",
     "AutoConfig.register(\"Fieldy\", FieldyConfig)\n",
     "AutoModelForSequenceClassification.register(FieldyConfig, Fieldy)\n",
-    "fieldy_model_path_pt = f\"/home/razorin/tabularts/results/{args_fieldy.data_type}/Fieldy/Fieldy_{args_fieldy.fieldtransf_nheads}fieldtransfheads_{args_fieldy.fieldtransf_nlayers}fieldtransflayers_{args_fieldy.hidden_size}hs_{args_fieldy.n_heads}heads_{args_fieldy.n_layers}layers_{'posemb' if args_fieldy.pos_emb else 'noposemb'}_{'colemb' if args_fieldy.col_emb else 'nocolemb'}_MSE_pt{args_fieldy.pt_epochs}ep_ft{args_fieldy.ft_epochs}ep_seed{args_fieldy.seed}/pt\" \n",
+    "fieldy_model_path_pt = f\"../results/{args_fieldy.data_type}/Fieldy/Fieldy_{args_fieldy.fieldtransf_nheads}fieldtransfheads_{args_fieldy.fieldtransf_nlayers}fieldtransflayers_{args_fieldy.hidden_size}hs_{args_fieldy.n_heads}heads_{args_fieldy.n_layers}layers_{'posemb' if args_fieldy.pos_emb else 'noposemb'}_{'colemb' if args_fieldy.col_emb else 'nocolemb'}_MSE_pt{args_fieldy.pt_epochs}ep_ft{args_fieldy.ft_epochs}ep_seed{args_fieldy.seed}/pt\" \n",
     "fieldy_model_pt = AutoModel.from_pretrained(fieldy_model_path_pt, vocab=dataset.vocab, output_attentions=True)"
    ]
   },
