fix: correct imports

--- a/plots/field_wise_attention.ipynb
+++ b/plots/field_wise_attention.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e757e958-0e4e-4045-a388-21b4171ec9cb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "42b9f49f-9daf-4a3f-87b7-5c1f7c2fdbd8",
    "metadata": {},
    "outputs": [],
@@ -49,11 +49,14 @@
     "    \n",
     "from main import load_prsa\n",
     "\n",
-    "from models.modules import (\n",
-    "    Model,\n",
+    "from models.configs import (\n",
     "    RowTabBERTConfig,\n",
-    "    RowTabBERT,\n",
     "    FieldyConfig,\n",
+    ")\n",
+    "\n",
+    "from models.models import (\n",
+    "    Model,\n",
+    "    RowTabBERT,\n",
     "    Fieldy,\n",
     ")\n",
     "\n",
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "afa96e2f",
    "metadata": {},
    "outputs": [],
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2040e591-fab3-4e75-8103-4e6f7b3d31fc",
    "metadata": {},
    "outputs": [],
@@ -92,8 +95,7 @@
     "parser = define_main_parser()\n",
     "args_row_tabbert = parser.parse_args(args=[\n",
     "    f\"--data-type=prsa\",\n",
-    "    \"--family=row_tabbert\"\n",
-    "    \"--field-hs=800\",\n",
+    "    \"--family=row_tabbert\",\n",
     "    \"--hidden-size=800\",\n",
     "    \"--fieldtransf-nheads=10\",\n",
     "    \"--fieldtransf-nlayers=6\",\n",
@@ -110,7 +112,6 @@
     "])\n",
     "args_fieldy = parser.parse_args(args=[\n",
     "    f\"--data-type=prsa\",\n",
-    "    \"--field-hs=800\",\n",
     "    \"--hidden-size=800\",\n",
     "    \"--fieldtransf-nheads=10\",\n",
     "    \"--fieldtransf-nlayers=8\",\n",
@@ -135,11 +136,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "08d56477-f71d-4aa5-9e62-792cfc3f5cf0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Requires to have proprocessed the PRSA dataset (execute prsa.sh if needed)\n",
     "with open(f\"./data/prsa/PRSADataset_labeled{name_suffix}.pkl\", \"rb\") as f:\n",
     "    dataset = pickle.load(f)"
    ]
@@ -150,7 +152,9 @@
    "id": "d9484e68-f90b-446d-9bbe-c16687730ceb",
    "metadata": {},
    "source": [
-    "# Models"
+    "# Models\n",
+    "\n",
+    "Requires to have trained the models on the PRSA dataset (execute `prsa.sh` if needed)\n"
    ]
   },
   {
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "91347ffa-ddcd-4e2c-8b15-5ea2a8d25d17",
    "metadata": {},
    "outputs": [],
@@ -226,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1814dce5-0553-40e5-bfc3-730c3b1c80d0",
    "metadata": {},
    "outputs": [],
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "96a82814",
    "metadata": {},
    "outputs": [],
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "79f61bdd-4d4e-4a9b-82fd-d323404dc40e",
    "metadata": {},
    "outputs": [],
@@ -331,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "6da6be03-f20e-43b3-970b-ba14a0a24f2b",
    "metadata": {},
    "outputs": [],
@@ -401,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b5a00145-65da-44dd-a0ac-d2cb9ca89bac",
    "metadata": {},
    "outputs": [],
@@ -412,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
